--- a/css/find.css
+++ b/css/find.css
@@ -1,61 +1,66 @@
-/* 기본 스타일 초기화 */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import "public.css";
+
+
+main{
+    width: 50vw;
+    min-width: 300px;
+    margin: 0 auto;
 }
 
-/* body를 flex 컨테이너로 설정하고 중앙 정렬 */
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f0f0f0;
+section{
+    border: 2px solid black;
+    border-radius: 6px;
+    margin: 30px 0;
 }
 
-/* form을 중앙 정렬 */
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+section > span{
+    display: block;
+    padding: 15px 20px;
+    border-bottom: 2px solid black;
+    font-size: var(--medium-font-size);
+    font-weight: bold;
+    background-color: aliceblue;
 }
 
-/* 각 div를 중앙 정렬하고 여백 추가 */
-form > div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    border-radius: 8px;
+.find-div{
+    padding: 5px 20px;
 }
 
-/* label과 input 스타일 */
-label {
-    margin-bottom: 10px;
+.find-title{
+    display: block;
+    margin: 15px 0;
+    font-weight: bold;
+    color: rgba(0,0,0,0.7);
 }
 
-input {
-    margin-bottom: 10px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+input{
+    display: block;
+    width: 100%;
+    padding: 15px 20px;
+    border: 1px solid black;
 }
 
-/* button 스타일 */
-button {
+/* number button remove */
+input::-webkit-inner-spin-button {
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+}
+
+input[type=email]{
+    border-top: none;
+}
+
+button{
+    width: 100%;
+    display: block;
+    margin: 20px 0;
     padding: 10px 20px;
-    border: none;
-    background-color: #007bff;
+    font-weight: bold;
     color: white;
+    background-color: cornflowerblue;
     cursor: pointer;
-    border-radius: 4px;
 }
-
-button:hover {
-    background-color: #0056b3;
+button:hover{
+    opacity: 0.9;
 }
-
