--- a/css/detail.css
+++ b/css/detail.css
@@ -1,52 +1,4 @@
-/* 헤더 부분 */
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 30px; /* 헤더 내부 여백 */
-}
-
-#e-book-category-div {
-    display: flex;
-    justify-content: flex-start;
-}
-
-#e-book-category-div > button {
-    display: flex;
-    justify-content: flex-start;
-    height: 50px;
-    width: 100px;
-}
-
-#country-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#country-div > button{
-    display: flex;
-    align-items: center;
-    height: 50px;
-    width: 100px;
-    text-align: center;
-    border: none;
-}
-
-#header-user-div {
-    display: flex;
-    justify-content: flex-end;
-    gap: 20px;
-}
-
-#header-user-div > button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 25px;
-}
-
+@import url(pub/public.css);
 
 /* 바디 부분*/
 
