--- a/css/pub/public.css
+++ b/css/pub/public.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: 'ONE-Mobile-Title';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/ONE-Mobile-Title.woff') format('woff');
+    font-family: 'Katuri';
+    src: url('https://gcore.jsdelivr.net/gh/projectnoonnu/noonfonts_13@1.0/Katuri.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 *{
-    font-family: 'ONE-Mobile-Title';
+    font-family: 'Katuri';
 }
 
 header {
