--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -35,46 +35,55 @@
 
 /* e-book main 부분 */
 
-#ebook-main-section{
-    top: 30px;
-    padding: 20px;
+#ebook-main-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 0;
 }
 
-#ebook-main-section > .book-category-div{
-    margin-bottom: 40px;
-    /*display: flex;*/
+#book-category-div {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
-#ebook-main-section > .book-category-div > .category {
+.category-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    font-size: 40px;
+    font-weight: bold;
+    margin: 20px;
+}
+
+.category {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /*justify-content: center;*/
+    gap: 20px;
+    margin: 20px;
 }
 
-#ebook-main-section > .book-category-div > .category > div {
-    width: 200px;
+.action,
+.romance,
+.oriental,
+.fantasy {
+    width: 300px;
     height: 300px;
-    flex: 0 0 calc(16.66% - 10px);
-    margin-bottom: 20px;
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
 }
 
-.category > div {
-    border: 1px solid black;
-    width: 400px;
-    height: 400px;
-    display: flex;
-    flex-direction: row;
-    margin-right: 10px;
-}
 
-.category > div.action,
-.category > div.romance,
-.category > div.oriental,
-.category > div.fantasy {
-    border: 1px solid black;
-    width: 400px;
-    height: 400px;
-    display: flex;
-    flex-direction: row;
-    margin-right: 10px;
-}
+
+
+
+
