--- a/css/pub/public.css
+++ b/css/pub/public.css
@@ -25,6 +25,9 @@
     --color3 : #A6705D;
     --color4 : #D9AE96;
     --color5 : #F2E5D5;
+
+    --main-width : 1700px
+    --main-margin : 0 auto;
 }
 
 
