--- a/css/viwerpage.css
+++ b/css/viwerpage.css
@@ -1,24 +1,52 @@
-@import "public.css";
+@import "pub/public.css";
 
-#arrow-container{
-    display: flex;
+/*********************************/
+#main-side-section{
+    display: inline-block;
+    margin: 0 50%;
+    width: 50%;
 }
+
+
+
+/*********************************/
 #top-container{
+    width: 100%;
     background-color: #ececec;
 
 }
-
-#form-section{
-    width: 50%;
-
+.next-chapter-class{
+    height: 30px;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(5, auto);
 }
+.next-chapter-class-select{
+    margin-right: 10px;
+}
+
+.next-chapter-class > :last-child{
+    margin-left: auto;
+}
+
+.next-chapter-class > div,i{
+    text-align: center;
+}
+
+/******************뷰어 영역 *******************/
+#view-side-container{
+    display: flex;
+    align-items: center;
+    background-color: #ececec;
+    width: 100%;
+}
+
 
 #viewer-section{
     display: inline-block;
+    width: 100%;
     height: 1000px;
-
-    background-color: #ececec;
+    background-color: #eed6ff;
     align-items: center;
     text-align: center;
-    width: 50%;
 }
