--- a/css/pub/public.css
+++ b/css/pub/public.css
@@ -26,7 +26,7 @@
     --color4 : #D9AE96;
     --color5 : #F2E5D5;
 
-    --main-width : 1700px
+    --main-width : 1700px;
     --main-margin : 0 auto;
 }
 
