--- a/css/viwerpage.css
+++ b/css/viwerpage.css
@@ -19,10 +19,12 @@
 
 /**************top 컨테이너**************/
 #top-container{
+    height: 80px;
     position: relative;
     margin-top: 20px;
     background-color: #ececec;
-    border: 2px solid black;
+    border: 1px solid #463632;
+    border-radius: 5px;
     padding: 20px 10px;
 }
 /************홈버튼,회차이동 영역*************/
@@ -32,11 +34,11 @@
 }
 .top-interaction-class > section:first-child{
     position: absolute;
-    left: 0;
+    left: 10px;
 }
 .top-interaction-class > section:last-child{
     position: absolute;
-    right: 0;
+    right: 10px;
 }
 .top-interaction-class > section:nth-child(2){
     position: absolute;
@@ -45,35 +47,76 @@
     left: 50%;
     transform: translate(-50%, -50% );
 }
-.title-section i{
-    font-size: 15px;
+.next-chapter-class-select,.page-button{
+    border: 2px solid black;
+    border-radius: 5px;
+    height: 40px;
+}
+
+.title-section{
+    width: 500px;
+}
+.title-section > i:first-child{
+    margin-right: 20px;
+}
+.title-section > i:last-child{
+    margin-left: 20px;
+}
+
+.title-section:first-child{
+    margin: 0 10px;
 }
 
 
-
+/******************제목, 아이콘들***********************/
+.title-section i{
+    font-size: 30px;
+}
 
 .title{
-    width: 100%;
+    background-color: #797979;
+    font-size: 30px;
+    text-align: center;
+    width: 400px;
 }
-
 
 
 
 /******************뷰어 영역 *******************/
 #view-side-container{
+    border: 1px solid #463632;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     background-color: #ececec;
     width: 100%;
 }
 
-
 #viewer-section{
     margin-top: 30px;
     display: inline-block;
     width: 100%;
     height: 1000px;
-    background-color: #eed6ff;
+    background-color: #d4d3d3;
     align-items: center;
     text-align: center;
 }
+#view-side-container > div{
+
+}
+#left-arrow-section > i{
+    padding-top: 90px;
+    border: 1px solid black;
+    text-align: center;
+    justify-content: center;
+    height: 200px;
+    width: 60px;
+}
+#right-arrow-section > i{
+    padding-top: 90px;
+    border: 1px solid black;
+    text-align: center;
+    height: 200px;
+    width: 60px;
+}
+
