--- a/css/viwerpage.css
+++ b/css/viwerpage.css
@@ -90,16 +90,18 @@
     align-items: center;
     background-color: #ececec;
     width: 100%;
+    padding-bottom: 30px;
 }
 
 #viewer-section{
     margin-top: 30px;
     display: inline-block;
     width: 100%;
-    height: 1000px;
+    height: 1500px;
     background-color: #d4d3d3;
     align-items: center;
     text-align: center;
+    /*margin-bottom: 30px;*/
 }
 #view-side-container > div{
 
