--- a/css/detail.css
+++ b/css/detail.css
@@ -37,6 +37,10 @@
 
 }
 
+#book-detail-info-div > i {
+
+}
+
 #detail-title {
     background-color: white;
     width: 400px;
@@ -68,7 +72,7 @@
 
 .part {
     background-color: white;
-    width: 80%;
+    width: calc(100% - 60px); /* 양옆의 margin을 고려하여 100%에서 60px을 뺌 */
     display: flex;
     align-items: center;
     margin: 30px;
@@ -83,6 +87,11 @@
 .part > button {
     border: 1px solid black;
     border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 20px;
+    width: 100px;
+    height: 50px;
+
 }
 
 /* 댓글 부분 */
@@ -105,12 +114,12 @@
 
 .comment {
     background-color: white;
-    width: 90%;
+    width: calc(100% - 60px);
     display: flex;
     align-items: center;
-    padding: 10px;
-    height: 60%;
-    margin-bottom: 20px;
+    margin: 30px;
+    padding: 40px;
+    font-size: 30px;
 }
 
 #user-comment-div {
