--- a/css/detail.css
+++ b/css/detail.css
@@ -8,7 +8,7 @@
 }
 
 #book-detail-div {
-    width: 75%;
+    width: 60%;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -24,8 +24,8 @@
 
 #detail-img {
     background-color: white;
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     margin: 20px;
 }
 
@@ -37,24 +37,25 @@
 
 }
 
-#book-detail-info-div > i {
-
-}
-
 #detail-title {
     background-color: white;
-    width: 400px;
-    height: 50px;
+    width: 60%;
+    height: auto;
     margin: 20px 20px 10px 20px;
     padding: 20px;
 }
 
 #detail-content {
     background-color: white;
-    width: 400px;
-    height: 150px;
+    width: 150%;
+    height: auto;
     margin: 10px 20px 20px 20px;
     padding: 20px;
+}
+
+#detail-content > i{
+    color: #ff6b6b;
+    cursor: pointer;
 }
 
 /* 파트 선택 부분 */
@@ -66,13 +67,13 @@
 
 #part-selection {
     background-color: var(--color5);
-    width: 75%;
+    width: 60%;
     height: 80%;
 }
 
 .part {
     background-color: white;
-    width: calc(100% - 60px); /* 양옆의 margin을 고려하여 100%에서 60px을 뺌 */
+    width: calc(100% - 60px);
     display: flex;
     align-items: center;
     margin: 30px;
@@ -80,11 +81,27 @@
     font-size: 30px;
 }
 
-.part p, .part button {
-    margin-left: 10px;
+.part > .part-chapter , #part-name,.price{
+    font-size: var(--font-size-large);
 }
 
-.part > button {
+.part > #part-name {
+    margin-left: 20px;
+}
+
+.part > .price{
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.part > .wishlist{
+    display: flex;
+    align-items: flex-end;
+}
+
+
+.part > .wishlist > .purchase, .cart {
+    gap: 10px;
     border: 1px solid black;
     border-radius: 5px;
     padding: 10px 20px;
@@ -103,8 +120,14 @@
     flex-direction: column;
 }
 
+.comment-container {
+    position: relative;
+    width: 250%;
+}
+
+
 #comment-div {
-    width: 75%;
+    width: 60%;
     background-color: var(--color5);
     display: flex;
     flex-direction: column;
@@ -146,15 +169,26 @@
 }
 
 .comment-input {
-    border: 1px solid black;
-    border-radius: 5%;
+    border: 2px solid black;
     background-color: transparent;
     font-size: var(--font-size-Xlarge);
-    padding: 0;
+    padding: 0 40px 0 10px; /* 하트 아이콘 공간 확보 */
+    width: 80%;
+    height: 200px;
+    box-sizing: border-box;
+    flex-grow: 1;
+    margin-right: 10px;
+    position: relative;
 }
 
+
+
 .comment-like {
-    display: flex;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 5px;
     color: #ff6b6b;
     cursor: pointer;
+    font-size: 30px;
 }
