--- a/css/pub/public.css
+++ b/css/pub/public.css
@@ -14,7 +14,7 @@
     --font-size-XXsmall : 10px;
     --font-size-Xsmall : 13px;
     --font-size-small : 15px;
-    --font-size-midium : 17px;
+    --font-size-medium : 17px;
     --font-size-large : 19px;
     --font-size-Xlarge : 21px;
     --font-size-XXlarge : 23px;
