--- a/css/login.css
+++ b/css/login.css
@@ -19,7 +19,7 @@ h1{
 
 /********************************/
 #login-info-section{
-    border: 1px solid var(--color-weak-gray);
+    border: 1px solid darkgrey;
     border-radius: 5px;
 }
 #login-info-section > label{
@@ -29,7 +29,7 @@ h1{
     font-size: var(--font-size-medium);
 }
 #login-info-section > label:first-child{
-    border-bottom: 1px solid var(--color-weak-gray);
+    border-bottom: 1px solid darkgrey;
 }
 
 #login-info-section input{
@@ -71,7 +71,7 @@ h1{
     font-size: var(--font-size-large);
     border: none;
     border-radius: 5px;
-    background-color: var(--color-strong);
+    background-color: var(--color1);
     cursor: pointer;
 }
 #login-btn:hover{
@@ -107,7 +107,7 @@ h1{
     width: 50px;
     text-align: center;
     padding: 0 15px;
-    border-right: 1px solid var(--color-weak-gray);
+    border-right: 1px solid darkgrey;
 }
 #simple-login-section a:nth-child(3){
     width: 80px;
