--- a/css/cashcharge.css
+++ b/css/cashcharge.css
@@ -16,7 +16,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 50px;
     box-sizing: border-box;
 }
 .header {
@@ -37,6 +37,7 @@ body {
     width: 45%;
 }
 .charge-unit {
+    font-size: var(--font-size-large);
     display: flex;
     align-items: center;
 }
@@ -49,6 +50,7 @@ body {
     border-radius: 5px;
     text-align: center;
 }
+
 .charge-button {
     padding: 15px;
     background-color: var(--color1);
