--- a/css/detail.css
+++ b/css/detail.css
@@ -22,38 +22,48 @@
     padding: 20px;
 }
 
-#detail-img {
-    background-color: white;
+#detail-img img {
     width: 100%;
-    height: 100%;
-    margin: 20px;
+    height: auto;
 }
 
 #book-detail-info-div {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-top: 30px;
-
+    margin: 10px;
 }
 
 #detail-title {
     background-color: white;
-    width: 60%;
+    width: 100%;
     height: auto;
-    margin: 20px 20px 10px 20px;
     padding: 20px;
+    margin: 10px;
 }
 
 #detail-content {
+    float: left;
     background-color: white;
-    width: 150%;
+    width: 100%;
     height: auto;
-    margin: 10px 20px 20px 20px;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
 }
 
-#detail-content > i{
+#detail-content p {
+    margin: 5px 0;
+}
+
+#save-btn-div{
+    display: flex;
+}
+
+#save-btn-div > #save{
+    background-color: transparent;
+    border: none;
     color: #ff6b6b;
     cursor: pointer;
 }
@@ -82,20 +92,22 @@
 }
 
 .part > .part-chapter , #part-name,.price{
-    font-size: var(--font-size-large);
+    font-size: var(--font-size-XXXlarge);
+    display: flex;
 }
 
 .part > #part-name {
+    flex: 1;
     margin-left: 20px;
 }
 
 .part > .price{
-    margin-left: 20px;
-    margin-right: 20px;
+    flex: 1;
+    text-align: right;
 }
 
 .part > .wishlist{
-    display: flex;
+    flex: 1;
     align-items: flex-end;
 }
 
@@ -105,7 +117,7 @@
     border: 1px solid black;
     border-radius: 5px;
     padding: 10px 20px;
-    font-size: 20px;
+    font-size: var(--font-size-Xlarge);
     width: 100px;
     height: 50px;
 
@@ -132,7 +144,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
 }
 
 .comment {
@@ -149,6 +161,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 20px;
+    margin-bottom: 20px;
 }
 
 .user-comment-div > .comment-author, .comment-input, .comment-like {
@@ -181,14 +194,23 @@
     position: relative;
 }
 
-
+.comment-like-btn-div {
+    display: flex;
+}
 
 .comment-like {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 5px;
+    background-color: transparent;
+    border: none;
     color: #ff6b6b;
     cursor: pointer;
-    font-size: 30px;
+    font-size: var(--font-size-Xlarge);
 }
+
+.comment-regist-div > #comment-btn {
+    font-size: var(--font-size-Xlarge);
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-top: 10px;
+}
+
