--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -44,6 +44,7 @@
 }
 
 #book-category-div {
+    margin: var(--main-margin);
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -56,7 +57,7 @@
 }
 
 .title {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     margin: 20px;
 }
