--- a/css/pub/header.css
+++ b/css/pub/header.css
@@ -10,44 +10,35 @@ header {
     justify-content: flex-start;
 }
 
+.img{
+    width: 80px;
+    height: 50px;
+    margin-right: 50px;
+}
+
 #e-book-category-div > button {
-    background-color: var(--color2);
-    color: white;
+    background-color: var(--color4);
+    color: black;
     text-align: center;
-    border: 2px solid var(--color5);
+    border: 2px solid black;
+    border-radius: 3px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50px;
-    width: 100px;
-    font-size: 20px;
+    height: 30px;
+    width: 80px;
+    font-size: 15px;
+    margin-top: 5px;
+}
+#e-book-category-div > button:nth-child(2){
+    margin-right: 15px;
 }
 
 #e-book-category-div > button:hover{
     opacity: 0.7;
 }
 
-
-#country-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#country-div > button {
-    background-color: var(--color2);
-    color: white;
-    text-align: center;
-    border: 2px solid var(--color5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    width: 100px;
-    font-size: 20px;
-}
-
-#country-div > button:hover {
+button:hover {
     opacity: 0.7;
 }
 
@@ -57,15 +48,48 @@ header {
     gap: 20px;
 }
 
-#header-user-div > #search, #user {
+.search-form{
+    position: relative;
+    margin: var(--main-margin);
+}
+
+.search-label{
     display: flex;
-    justify-content: flex-start;
-    height: 50px;
-    width: 100px;
+    background-color: #eeeded;
+    padding: 10px 15px;
+    border-radius: 24px;
+}
+.search-label > input{
+    flex: 1;
+    margin-right: 10px;
+    padding: 5px;
+    font-size: 16px;
+    background-color: unset;
+    outline: unset;
+    border: none;
+}
+
+#search, #user {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: transparent;
     border: none;
-    font-size: 30px;
+    font-size: 20px;
     cursor: pointer;
+}
+.search-section{
+    position: absolute;
+    bottom: -120px;
+    background-color: #dedede;
+    padding: 10px;
+    width: 110%;
+}
+.search-section > h4{
+    margin-bottom: 10px;
+}
+.search-view{
+    list-style-position: inside;
 }
 
 /*여기까지가 헤더 부분 */
