--- a/css/pub/public.css
+++ b/css/pub/public.css
@@ -23,10 +23,10 @@
     --font-size-XXlarge : 23px;
     --font-size-XXXlarge : 25px;
 
-    --color1 : #fcefef;
-    --color2 : #f5eceb;
+    --color1 : #d3d3d3;
+    --color2 : #948f8f;
     --color3 : #e3e3e3;
-    --color4 : #b7b7b7;
+    --color4 : #ffffff;
     --color5 : #939393;
 
     --main-width : 1700px;
