--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -1,21 +1,21 @@
 @import url(pub/public.css);
 
-
-
+main{
+    width: 1500px;
+    margin: 0 auto;
+}
+/* main-slide-section 부분 */
 /* 엠블라 캐러셀 적용 */
-#main-slide-section > img{
-    width: 50%;
-    height: 50%;
-    display: block;
-    align-items: center;
-    justify-content: center;
-}
-
-.main-slide {
-    overflow: hidden;
+#main-slide-section {
     border: 1px;
+    width: 100%;
+    /*height: 80vh;*/
+    overflow: hidden;
+    aspect-ratio: 2 / 1;
 }
-.embla__container {
+#main-slide-section > .embla__container {
+    width: 100%;
+    height: 100%;
     display: flex;
     list-style-type: none;
     padding: 0;
@@ -23,64 +23,186 @@
     align-items: center;
 }
 
-.embla__slide {
-    border: black;
-    border-radius: 2px;
-    flex: 0 0 30%;
+#main-slide-section > .embla__controls{
+    position: relative;
+    height: 50px;
+}
+
+#main-slide-section .embla__controls .embla__buttons button span {
+    color: white;
+    transition: color 0.3s ease;
+    display: block;
+}
+
+
+#main-slide-section .embla__controls .embla__buttons .embla__button--prev{
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 50px;
+}
+
+#main-slide-section .embla__controls .embla__buttons .embla__button--prev:hover{
+    color: white;
+
+}
+
+
+#main-slide-section .embla__controls .embla__buttons .embla__button--next{
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 50px;
+}
+
+#main-slide-section .embla__controls .embla__buttons .embla__button--next:hover{
+    color: white;
+
+}
+
+
+#main-slide-section .embla__controls .embla__buttons button span i {
+    color: black;
+
+}
+
+#main-slide-section .embla__controls .embla__buttons button span i:hover {
+    color: white;
+
+}
+
+#main-slide-section .embla__slide {
+    height: 100%;
+    flex: 0 0 100%;
     list-style-type: none;
-    height: 50%; /* 원하는 높이로 설정 */
+}
+#main-slide-section .embla__slide video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+#main-slide-section .embla__slide img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#main-slide-section .embla__controls .embla__buttons button{
+    background-color: transparent;
+    border: none;
+    display: block;
+    align-items: center;
+    color: darkslategrey;
+
+}
+
+#main-slide-section .embla__dots{
+    bottom: 0;
+    transform: translateX(-50%);
+
+}
+
+#main-slide-section .embla__dots .embla__dot i{
+    color: white;
+    border: 2px solid black;
+    cursor: pointer;
+}
+
+#main-slide-section .embla__dots .embla__dot:hover {
+    color: #fff;
 }
 
 /*************************************************/
 
 /* e-book main 부분 */
-
 #ebook-main-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 40px 0;
 }
-
-#book-category-div {
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+.category-container{
+    width: 100%;
+    overflow: hidden;
 }
 
-.category-div {
+.category-container  > .embla__container {
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
     align-items: center;
 }
-
-.title {
-    font-size: 40px;
-    font-weight: bold;
-    margin: 20px;
+.category-container .embla__slide {
+    height: 100%;
+    flex: 0 0 100%;
+    list-style-type: none;
+}
+.category-container  .embla__slide img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-.category {
-    display: flex;
-    flex-wrap: wrap;
-    /*justify-content: center;*/
-    gap: 20px;
-    margin: 20px;
+.category-container .book-container {
+    position: relative;
+    flex: 0 0 250px;
+    aspect-ratio: 3 / 4;
+    margin-right: 10px;
+    &:hover div{
+        bottom: 0;
+    }
 }
 
-.action,
-.romance,
-.oriental,
-.fantasy {
-    width: 300px;
-    height: 300px;
-    border: 2px solid black;
+.category-container .book-container > a{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 16px;
+    text-decoration: none;
+    color: white;
 }
+.category-container .book-container  > a > div{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: -100%;
+    transition-duration: 1s;
+    padding: 20px 5px;
+    background-color: rgba(0,0,0,0.3);
+    font-size: var(--font-size-medium);
+}
+.category-container .book-container  h5{
+    font-size: var(--font-size-large);
+    margin-bottom: 10px;
+}
+.category-container .book-container  p{
+    font-size: var(--font-size-small);
+}
+.category-container .book-container > a img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.category{
+    font-size: var(--font-size-Xlarge);
+}
+
+/*.action,*/
+/*.romance,*/
+/*.oriental,*/
+/*.fantasy {*/
+/*    width: 300px;*/
+/*    height: 300px;*/
+/*    border: 2px solid black;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    font-size: 16px;*/
+/*}*/
 
 
 
