--- a/css/pub/public.css
+++ b/css/pub/public.css
@@ -1,6 +1,3 @@
-
-
-
 @font-face {
     font-family: 'Katuri';
     src: url('https://gcore.jsdelivr.net/gh/projectnoonnu/noonfonts_13@1.0/Katuri.woff') format('woff');
@@ -17,20 +14,18 @@
     --font-size-XXsmall : 10px;
     --font-size-Xsmall : 13px;
     --font-size-small : 15px;
-    --font-size-medium : 17px;
+    --font-size-midium : 17px;
     --font-size-large : 19px;
     --font-size-Xlarge : 21px;
     --font-size-XXlarge : 23px;
     --font-size-XXXlarge : 25px;
 
-    --color1 : #d3d3d3;
-    --color2 : #948f8f;
-    --color3 : #e3e3e3;
-    --color4 : #ffffff;
-    --color5 : #939393;
+    --color1 : #402F2B;
+    --color2 : #73493F;
+    --color3 : #A6705D;
+    --color4 : #D9AE96;
+    --color5 : #F2E5D5;
 
-    --main-width : 1700px;
-    --main-margin : 0 auto;
+    --main-width : 1500px;
+    --main-margin : 100px auto;
 }
-
-
