--- a/e-book-projectback/src/main/resources/templates/pub/header.html
+++ b/e-book-projectback/src/main/resources/templates/pub/header.html
@@ -60,7 +60,7 @@
                 <h4 class="my-cash">현재 보유 캐시</h4>
                 <div class="my-page-point">
                     <h4>100P</h4>
-                    <button>충전</button>
+                    <button id="cash-charge" th:onclick="openCashChargePage()">충전</button>
                 </div>
                 <div class="logout-div">
                     <button class="logout-btn">로그아웃</button>
