--- a/e-book-projectback/src/main/resources/static/css/viewerpage.css
+++ b/e-book-projectback/src/main/resources/static/css/viewerpage.css
@@ -132,3 +132,64 @@ i:hover{
     opacity: 50%;
 }
 
+
+
+/*********************************************/
+.view-pagebar-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.view-page-bar-btn > button{
+    padding: 10px;
+}
+
+.view-page-bar-number{
+
+}
+.view-page-bar-number > label, .view-page-bar-number .total-page{
+    display: inline-block;
+    width: 60px;
+    text-align: center;
+}
+.view-page-bar-number input{
+    width: 100%;
+    text-align: center;
+    border: none;
+    padding: 10px;
+    outline: unset;
+}
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.page-bar-container{
+    display: flex;
+    align-items: center;
+    width: 400px;
+    height: 20px;
+    position: relative;
+}
+.page-bar-parent{
+    flex: 1;
+    width: 100%;
+    height: 30%;
+    background-color: black;
+}
+.page-bar-child{
+    position: absolute;
+    height: 100%;
+    transform: translate(-100%, -35%);
+    width: 5px;
+    /*height: 15px;*/
+    background-color: red;
+}
+
+
+
+
+
+
+
+
