--- a/e-book-projectback/src/main/resources/templates/viewerpage.html
+++ b/e-book-projectback/src/main/resources/templates/viewerpage.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+>
 <head>
     <meta charset="UTF-8">
     <title>뷰어</title>
     <link rel="stylesheet" href="../css/viwerpage.css">
+    <link rel="stylesheet" href="../static/css/viewerpage.css" th:href="@{/css/viewerpage.css}">
     <script src="https://kit.fontawesome.com/6cefa8d439.js" crossorigin="anonymous"></script>
+    <script src="../static/js/viewerpage.js" defer></script>
 
 </head>
 <body>
@@ -36,7 +42,7 @@
                 </div>
             </div>
 
-            <div id="view-side-container">
+            <div id="view-side-container" style="display: none">
                 <button id="left-arrow-section">
                     <i class="fa-solid fa-arrow-left"></i>
                 </button>
@@ -44,7 +50,24 @@
                 <button id="right-arrow-section">
                     <i class="fa-solid fa-arrow-right"></i>
                 </button>
+            </div>
 
+            <div class="view-pagebar-section">
+                <div class="view-page-bar-btn">
+                    <button>버튼눌러용</button>
+                </div>
+
+                <div class="page-bar-container">
+                    <div class="page-bar-parent">
+                        <div class="page-bar-child"></div>
+                    </div>
+                </div>
+
+                <div class="view-page-bar-number">
+                    <label><input class="curt-page" type="number" value="1" max="139"></label>
+                    <span>/</span>
+                    <span class="total-page">139</span>
+                </div>
             </div>
         </div>
 
