--- a/ebookproject/src/main/resources/templates/user/login.html
+++ b/ebookproject/src/main/resources/templates/user/login.html
@@ -36,8 +36,8 @@
                 <button id="login-btn">로그인</button>
         </form>
         <section id="nav-section">
-            <a href="#">아이디 찾기</a>
-            <a href="#">비밀번호 재설정</a>
+            <a href="/user/findId">아이디 찾기</a>
+            <a href="/user/resetPassword">비밀번호 재설정</a>
             <a href="/user/register">회원가입</a>
         </section>
         <section id="simple-login-section">
