--- a/e-book-projectback/src/main/resources/templates/viewerpage.html
+++ b/e-book-projectback/src/main/resources/templates/viewerpage.html
@@ -7,10 +7,9 @@
 <head>
     <meta charset="UTF-8">
     <title>뷰어</title>
-    <link rel="stylesheet" href="../css/viwerpage.css">
     <link rel="stylesheet" href="../static/css/viewerpage.css" th:href="@{/css/viewerpage.css}">
     <script src="https://kit.fontawesome.com/6cefa8d439.js" crossorigin="anonymous"></script>
-    <script src="../static/js/viewerpage.js" defer></script>
+    <script src="../static/js/viewerpage.js" th:src="@{/js/viewerpage.js}" defer></script>
 
 </head>
 <body>
@@ -42,7 +41,7 @@
                 </div>
             </div>
 
-            <div id="view-side-container" style="display: none">
+            <div id="view-side-container">
                 <button id="left-arrow-section">
                     <i class="fa-solid fa-arrow-left"></i>
                 </button>
@@ -54,7 +53,7 @@
 
             <div class="view-pagebar-section">
                 <div class="view-page-bar-btn">
-                    <button>버튼눌러용</button>
+                    <button>뷰어페이지 전환</button>
                 </div>
 
                 <div class="page-bar-container">
