--- a/ebookproject/src/main/resources/static/css/main-carousel.css
+++ b/ebookproject/src/main/resources/static/css/main-carousel.css
@@ -1,13 +1,14 @@
 .embla {
-    max-width: 48rem;
     margin: auto;
-    --slide-height: 19rem;
+    height: 600px;
+    --slide-height: 600px;
     --slide-spacing: 1rem;
     --slide-size: 100%;
 }
 .embla__viewport {
     overflow: hidden;
 }
+
 .embla__container {
     backface-visibility: hidden;
     display: flex;
@@ -28,12 +29,12 @@
     justify-content: center;
     height: var(--slide-height);
 }
+
+
+
 .embla__controls {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    justify-content: space-between;
-    gap: 1.2rem;
-    margin-top: 1.8rem;
+    position: absolute;
+    bottom: 0;
 }
 .embla__buttons {
     display: grid;
@@ -41,6 +42,11 @@
     gap: 0.6rem;
     align-items: center;
 }
+
+
+
+
+
 .embla__button {
     -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
     -webkit-appearance: none;
@@ -62,7 +68,7 @@
     justify-content: center;
 }
 .embla__button:disabled {
-    color: var(--detail-high-contrast);
+    color: gray;
 }
 .embla__button__svg {
     width: 35%;
