--- a/ebookproject/src/main/resources/templates/mypage.html
+++ b/ebookproject/src/main/resources/templates/mypage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>내 정보 페이지</title>
-    <link rel="stylesheet" href="public.css">
-    <link rel="stylesheet" href="mypage.css">
+    <link rel="stylesheet" href="../static/css/mypage.css">
+    <link rel="stylesheet" href="../static/css/public/public.css">
     <script src="https://kit.fontawesome.com/d19fdaba43.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -22,6 +22,11 @@
                         <div>
                             <span>이름 : </span>
                             <span>홍길동</span>
+                        </div>
+                        <div id="password-change-btn">
+                            <a href="">
+                                비밀번호 변경
+                            </a>
                         </div>
                         <div>
                             <span>아이디 : </span>
