--- a/e-book-projectback/src/main/resources/templates/detail.html
+++ b/e-book-projectback/src/main/resources/templates/detail.html
@@ -7,10 +7,9 @@
 <head>
     <meta charset="UTF-8">
     <title>상세페이지</title>
-
-    <link rel="stylesheet" href="../static/css/detail.css" th:href="@{/css/detail.css}">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/d19fdaba43.js"></script>
     <link rel="stylesheet" href="../static/css/pub/public.css" th:href="@{/css/pub/public.css}">
+    <link rel="stylesheet" href="../static/css/detail.css" th:href="@{/css/detail.css}">
 </head>
 <body>
 
@@ -19,20 +18,20 @@
         <section id="book-detail-section">
             <div id="book-detail-div">
                 <div id="book-detail-img-div">
-                    <div id="detail-img" style="background-image: url('https://i.namu.wiki/i/l0x04r27DjSQmS-WgYk6I5x6IkKMyvZjRMyK5dI3EMoMikzCd2Kfl2SMRdvL3-y4zpxI_qLP-fs3QToSR7AU3g.webp')">
+                    <div id="detail-img" th:style="|background-image: url('${detail.bookImage}')|">
                         <!-- 책 이미지를 여기에 넣으시면 됩니다 -->
                     </div>
                 </div>
             </div>
             <div id="book-detail-info-div">
-                <div id="detail-title">이것이 자바다 (교육현장에서 가장 많이 쓰인 JAVA 프로그래밍 기본서)</div>
+                <div th:text="${detail.bookTitle}" id="detail-title">이것이 자바다 (교육현장에서 가장 많이 쓰인 JAVA 프로그래밍 기본서)</div>
                 <div id="detail-content">
                     <div id="save-btn-div">
-                        <p>저자 신용권, 임경균</p>
+                        <p th:text="${detail.bookAuthor}">저자 신용권, 임경균</p>
                         <button id="save"><i class="fa-regular fa-heart"></i></button>
                     </div>
-                    <p>출판 한빛미디어 2024.04.01</p>
-                    <p>최신 JAVA 21 버전 반영! 9년 동안 꾸준히 사랑받은 자바 베스트셀러, 『이것이 자바다』 3판!</p>
+                    <p th:text="${detail.bookPublisher}">출판 한빛미디어 2024.04.01</p>
+                    <p th:text="${detail.bookDescription}">최신 JAVA 21 버전 반영! 9년 동안 꾸준히 사랑받은 자바 베스트셀러, 『이것이 자바다』 3판!</p>
                 </div>
             </div>
         </section>
