--- a/e-book-projectback/src/main/resources/templates/mainPage.html
+++ b/e-book-projectback/src/main/resources/templates/mainPage.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko"
+      xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/d19fdaba43.js"></script>
 <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
 <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js"></script>
 <script src="https://kit.fontawesome.com/d786e67464.js" crossorigin="anonymous"></script>
 <script src="../static/js/main-carousel.js" defer></script>
-<link href="../static/css/mainpage.css" rel="stylesheet">
+<link href="../static/css/mainpage.css" rel="stylesheet" th:href="@{/css/mainpage.css}" >
 <head>
     <meta charset="UTF-8">
     <title>메인 페이지</title>
@@ -72,10 +76,10 @@
                 <div class="category-container embla">
                     <ul class="embla__container">
                         <li class="book-container embla__slide">
-                            <a href="#">
+                            <a th:href="@{|/detail.${detail.no}|}" th:each="room: ${rooms}">
                                 <img src="https://vignette.wikia.nocookie.net/pokemon/images/5/52/%ED%94%BC%EC%B9%B4%EC%B8%84_%EA%B3%B5%EC%8B%9D_%EC%9D%BC%EB%9F%AC%EC%8A%A4%ED%8A%B8.png/revision/latest?cb=20170405000019&path-prefix=ko" alt="#">
                                 <div>
-                                    <h5 class="title">나를 위한 사회학</h5>
+                                    <h5 class="title" th:text="@{detail.bookTitle}">나를 위한 사회학</h5>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto, blanditiis, consequuntur corporis dolore earum eius eveniet expedita fugiat ipsa neque, pariatur quaerat qui quibusdam reiciendis sequi tenetur velit voluptatibus!</p>
                                 </div>
                             </a>
