--- a/ebookproject/src/main/resources/templates/mypage.html
+++ b/ebookproject/src/main/resources/templates/mypage.html
@@ -29,11 +29,11 @@
                             <span>이름 : </span>
                             <span>홍길동</span>
                         </div>
-                        <div id="password-change-btn">
+                        <section id="password-change-btn">
                             <a href="">
                                 비밀번호 변경
                             </a>
-                        </div>
+                        </section>
                         <div>
                             <span>아이디 : </span>
                             <span>korea</span>
@@ -69,18 +69,12 @@
                     <div>
                         <button>구매 목록</button>
                     </div>
-                    <div>
-                        <button>댓글 목록</button>
-                    </div>
-                    <div>
-                        <button>댓글 좋아요 목록</button>
-                    </div>
                 </div>
                 <div>
                     <section id="like-list-section">
                         <a class="like-list">
                             <div>
-                                이미지<img src="" alt="">
+                                <img src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
                             </div>
                             <div>
                                 <div class="like-btn">
@@ -95,7 +89,7 @@
                         </a>
                         <a class="like-list">
                             <div>
-                                이미지<img src="" alt="">
+                                <img src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
                             </div>
                             <div>
                                 <div class="like-btn">
@@ -108,21 +102,18 @@
                                 </div>
                             </div>
                         </a>
-                    </section>
-                    <section id="content-like-list-section">
-                        <a class="content-like-list">
-                            <div class="img-section">
-                                <img src="" alt="">
+                        <a class="like-list">
+                            <div>
+                                <img src="https://i.ytimg.com/vi/IBG4hCwqq6U/maxresdefault.jpg"  alt=""/>
                             </div>
-                            <div class="content-box">
-                                <div class="nickname-section">
-                                    <span>유저 닉네임</span>
+                            <div>
+                                <div class="like-btn">
+                                    <span>1. 이것이 자바다</span>
+                                    <i class="fa-regular fa-heart"></i>
                                 </div>
                                 <div>
-                                    <div class="content-section">
-                                        <span>댓글 내용</span>
-                                        <i class="fa-solid fa-heart"></i>
-                                    </div>
+                                    <span>저자 : 신용권, 임경균</span>
+                                    <span>출판 미디어 2024.04.01</span>
                                 </div>
                             </div>
                         </a>
