--- a/ebookproject/src/main/resources/static/css/mypage.css
+++ b/ebookproject/src/main/resources/static/css/mypage.css
@@ -6,7 +6,6 @@ main{
 main > section{
     margin: 0 auto;
     padding: 40px 0;
-    background-color: rgba(242,229,213,0.7);
 }
 
 #my-info-section{
@@ -16,11 +15,6 @@ main > section{
 #my-info-section > h1{
     font-size: var(--font-size-XXXlarge);
     padding: 40px 60px;
-}
-
-#password-change-btn{
-    display: flex;
-    justify-content: right;
 }
 
 #password-change-btn a{
@@ -44,6 +38,7 @@ main > section{
     height: 200px;
     border-radius: 50%;
     background-color: rgba(170,170,170,0.4);
+    border: 1px solid rgba(170,170,170,0.8);
 }
 
 #my-info-image-section img{
@@ -56,13 +51,28 @@ main > section{
 #my-info-span-section{
     height: 300px;
     padding: 70px;
-    background-color: rgba(217,174,150,0.3);
+    /*background-color: rgba(170,170,170,0.3);*/
+    border: 1px solid rgba(170,170,170,0.8);
+    border-radius: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    position: relative;
 
 }
 #my-info-span-section div{
-    margin: 0 10px;
+    display: flex;
+    align-items: center;
+    padding: 3px;
+    margin: 5px 0;
+    border-bottom: 1px solid black;
+}
+#password-change-btn{
+    display: flex;
+    justify-content: right;
+    border-bottom: none;
+    position: absolute;
+    right: 0;
+    padding: 20px;
 }
 
 /*******************************************/
@@ -73,13 +83,13 @@ main > section{
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: rgba(217,174,150,0.3);
+    border: 1px solid rgba(170,170,170,0.8);
+    border-radius: 10px;
 }
 #cash-section div{
     margin: 0 30px;
 }
 #cash-section button{
-    background-color: var(--color4);
     border-radius: 5px;
     border: none;
     padding: 10px 15px;
@@ -101,15 +111,14 @@ main > section{
 #like-list-name-section div{
     width: 100%;
     text-align: center;
-    background-color: var(--color4);
 }
 
 #like-list-name-section button{
     width: 100%;
     height: 100%;
     padding: 20px 10px;
-    background-color: var(--color4);
-    border: none;
+    border: 1px solid rgba(170,170,170,0.8);
+    border-radius: 20px 20px 0 0;
     cursor: pointer;
 }
 #like-list-name-section button:hover{
@@ -117,33 +126,37 @@ main > section{
 }
 #like-list-name-section button:active{
     opacity: 0.7;
-    background-color: var(--color3);
+    background-color: gray;
 }
 
 /********************************************/
 
 #like-list-section{
-    background-color: var(--color5);
-    margin: 0 75px;
-    padding: 50px 30px;
+    padding: 0 75px;
 }
 .like-list{
     display: flex;
     margin: 20px 0;
-    padding: 30px;
-    /*background-color: #F2E5D5;*/
+    padding: 30px 0;
+    border-bottom: 1px solid rgba(170,170,170,0.7);
 }
 .like-list > div{
     align-items: center;
 }
+
+.like-list img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 .like-list > div:first-child{
-    width: 120px;
-    height: 150px;
+    width: 200px;
+    height: 250px;
     margin-right: 20px;
-    background-color: #A6705D;
 }
 .like-list > div:nth-child(2){
     width: 100%;
+    padding-top: 30px;
 }
 .like-list > div:nth-child(2) i{
     color: red;
@@ -155,60 +168,4 @@ main > section{
 .like-list > div:nth-child(2) > div:first-child{
     display: flex;
     justify-content: space-between;
-}
-
-/****************************************/
-
-#content-like-list-section{
-    background-color: var(--color5);
-    margin: 0 75px;
-    padding: 50px 30px;
-}
-.content-like-list{
-    display: flex;
-    margin: 20px 0;
-    padding: 30px;
-    background-color: #F2E5D5;
-}
-
-.img-section{
-    width: 55px;
-    height: 55px;
-    border-radius: 50%;
-    background-color: #402F2B;
-}
-.img-section img{
-    background-position: center;
-    background-size: cover;
-}
-
-.content-box{
-    margin-left: 30px;
-    display: flex;
-    flex-direction: column;
-}
-
-.content-box > div:first-child{
-    margin-bottom: 15px;
-}
-
-.content-box > div:nth-child(2){
-    border: 1px solid black;
-    width: 650px;
-}
-
-.content-section{
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-}
-.content-section i{
-    margin: 10px;
-    color: red;
-    cursor: pointer;
-}
-
-.content-section span{
-    margin: 10px;
-    font-size: var(--font-size-Xsmall);
 }
